# chat-app

./: README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  test_api_integration.py
backend/app/: chat_user.py  connection.py  connection_manager.py  message.py  person.py
backend/authentication/: registration.py  utils.py
backend/bot/: bot_agent.py  tools.py
backend/core/: database.py
backend/models/: script.py  sql_tables.py
backend/schema/: pydantic_model.py
frontend/: package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/BottomNav/: BottomNav.css  BottomNav.jsx
frontend/src/constants/: config.js
frontend/src/features/auth/: Login.css  Login.jsx  Signup.css  Signup.jsx
frontend/src/features/chat/: Chat.css  Chat.jsx  EmptyChat.css  EmptyChat.jsx  index.js
frontend/src/features/contacts/: Contacts.css  Contacts.jsx
frontend/src/features/maintenance/: Maintenance.css  Maintenance.jsx
frontend/src/hooks/: useServerHealth.js
frontend/src/services/: api.js  apiService.js  websocketService.js
frontend/src/styles/: global.css
frontend/src/utils/: helpers.js
