[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt==4.0.1",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.7",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
